style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Risque&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
:root {
    --black: hsl(100, 9%, 7%);
    --darkgray: hsl(110, 5%, 24%);
    --greenhaze: hsl(155, 99%, 29%);
    --graygreen:hsl(141, 6%, 44%);
    --lightgraygreen: hsl(139, 9%, 61%);
    --gray: hsl(0, 0%, 77%);
    --lightgray:hsl(0, 0%, 95%);
    --apricot: hsl(29, 61%, 67%);
    --lightapricot: hsl(38, 100%, 82%);
}
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body {
    font-family: 'Roboto', sans-serif;
    /*font-family: 'Risque', cursive;*/
}
.flex {
    display: flex;
}
#homepg, #about {
    height: 100vh;
    overflow: hidden;
}

/* NAVBAR */

nav {
    position: relative;
    z-index: 1;
}
.navbar {
    align-items: center;
    height: 6em;
    justify-content: right;
    padding-inline-end: max(5vw,1em);
}

/* HOME PAGE - DESIGN */

.bg-photo {
    overflow: hidden;
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0;
    z-index: -10;
}
.bg-photo img {
    object-fit: cover;
    height: 100%;
    object-position: -13em;
}
.header-holder {
    justify-content: center;
}
.header {
    padding-top: 5vh;
    display: flex;
    flex-direction: column;
}
.header h1, .header p {
    text-transform: uppercase;
    font-weight: bold;
}
.header h1 {
    font-size: min(23vw , 12rem);
    color: var(--graygreen);
    letter-spacing: 4px;
    line-height: min(22vw, 1em);
}
.header p {
    font-family: 'Josefin Sans', sans-serif;
    font-size: min(3.5vw , 1.25rem);
    color: var(--lightgraygreen);
    letter-spacing: 2px;
    padding-inline-start: min(1.25vw , 12px);
}
.btn-holder {
    margin-top: min(3em,7vh);
}
.action-btn {
    background-color: var(--greenhaze);
    display: inline-block;
    border: 0;
    color: white;
    font-size: min(1.75rem,10vh);
    font-family: 'Roboto', sans-serif;
    font-weight: 100;
    text-transform: uppercase;
    margin-inline-start: min(1.25vw , 15px);
    padding: 0.75em;
}
.shadow-btn {
    color: transparent;
    background-color: transparent;
    border: 1px solid white;
    position: absolute;
    z-index: -1;
    margin-left: -5.125em;
    margin-top: -0.25em;
}

/* HOME PAGE - SOCIAL MEDIA CONTAINER GRID */

.sm-container {
    width: 30vh;
    height: 30vh;
    background-color: white;
    position: absolute;
    bottom: 0;
    z-index: 1;
    display: grid; 
    grid-template-columns: 1fr 1fr 1fr; 
    grid-template-rows: 1fr 1fr 1fr; 
    gap: 0px 0px; 
    grid-template-areas: 
        "socials light-green-square dark-square"
        "socials . light-gray-square"
        "socials . ."; 
}
.light-green-square { 
    grid-area: light-green-square; 
    background-color: var(--lightgraygreen);
}
.dark-square { 
    grid-area: dark-square; 
    background-color: var(--darkgray);
}
.light-gray-square { 
    grid-area: light-gray-square; 
    background-color: var(--gray);
}
.socials { 
    grid-area: socials; 
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding: 1em 0;
}
.socials img {
    width: 40%;
}

/* ABOUT - DESIGN */

#about {
    background-color: var(--black);
    position: relative;
    z-index: -3;
} 
.dark-shadow {
    width: 19rem;
    height: 80vh;
    position: absolute;
    bottom: 0;
    box-shadow: 10px -10px 15px rgba(0, 0, 0, 0.5);
    z-index: -2;
}
.h-about {
    /* background-color: red; */
    display: inline-block;
}
.h-about h2 {
    color: transparent;
    font-weight: 900;
    font-size: 22vw;
    line-height: 17vw;
    text-transform: uppercase;
    text-align: right;
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: var(--apricot);
}
.p-about {
    /* background-color: rgb(79, 72, 136); */
    margin-block-start: 2em;
}
.p-about p{
    color: var(--lightapricot);
    font-weight: 700;
    font-size: 0.75rem;
    letter-spacing: 0.15em;
    line-height: 1.75em;
    text-align: right;
    text-transform: uppercase;
}
.header-aboutus {
    display: inline-block;
    margin-inline-end: 8vw;
}
.header-aboutus-holder {
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.up-photo {
    position: absolute;
    top: 0;
    z-index: -1;
    margin-left: 2em;
    height: 40vh;
}
.down-photo {
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: -1;
    height: 50vh;
    overflow-x: hidden;
}
.down-photo img, .up-photo img  {
    height: 100%;
}

